// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading if no content 1`] = `
<Connect(ApollosPullToRefreshWithoutData)
  handleRefresh={[Function]}
>
  <Meta
    title="Articles"
  />
  <div
    className="soft@portable soft-double@lap-and-up background--light-secondary"
  >
    <section
      className="soft-half"
    >
      <div
        className="grid"
      >
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-whole"
        >
          <mockConstructor />
        </div>
      </div>
    </section>
  </div>
</Connect(ApollosPullToRefreshWithoutData)>
`;

exports[`renders with props 1`] = `
<Connect(ApollosPullToRefreshWithoutData)
  handleRefresh={[Function]}
>
  <Meta
    title="Articles"
  />
  <div
    className="soft@portable soft-double@lap-and-up background--light-secondary"
  >
    <section
      className="soft-half"
    >
      <div
        className="grid"
      >
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
        >
          <Connect(Apollo(LikesWrapper))
            item={Object {}}
          />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
        >
          <Connect(Apollo(LikesWrapper))
            item={Object {}}
          />
        </div>
        <div
          className="grid__item one-whole"
        >
          <mockConstructor />
        </div>
      </div>
    </section>
  </div>
</Connect(ApollosPullToRefreshWithoutData)>
`;
